--- a/main.html
+++ b/main.html
@@ -10,7 +10,36 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+ </head>
+ <body>
+    <table border="2", style="background-color: yellow;" >
+      <tr>
+        <th>Name</th>
+        <th>Age</th>
+        <th>Branch</th>
+      </tr>
+      <td>
+        
+            shah
+        </td>
+        <td>20</td>
+        <td>CSE</td>
+    </tr>
+   <tr>
+    <td>Adil</td>
+    <td>21</td>
+    <td>ECE</td>
+   </tr>
 
+    </table>
+ </body>
+ </html>
 </body>
 
 </html>
