--- a/main.html
+++ b/main.html
@@ -18,24 +18,29 @@
     <title>Document</title>
  </head>
  <body>
-    <table border="2", style="background-color: yellow;" >
-      <tr>
-        <th>Name</th>
-        <th>Age</th>
-        <th>Branch</th>
-      </tr>
-      <td>
-        
-            shah
-        </td>
-        <td>20</td>
-        <td>CSE</td>
-    </tr>
-   <tr>
-    <td>Adil</td>
-    <td>21</td>
-    <td>ECE</td>
-   </tr>
+   <STYle>
+        #tab2{
+            background-color: yellow;
+             
+        }
+    </STYle>
+    <table border="1px" id="tab2", style="border: black;" >
+        <caption>Student Details</caption>
+        <tr>
+            <th>NAME</th>
+            <TH>AGE</TH>
+            <th>BRANCH</th>
+        </tr>
+        <tr>
+            <td>shaw</td>
+            <td>20</td>
+            <td>CSE</td>
+        </tr>
+        <TR>
+            <TD>adil</TD>
+            <TD>21</TD>
+            <TD>ECE</TD>
+        </TR>
 
     </table>
  </body>
