--- a/main.html
+++ b/main.html
@@ -32,12 +32,12 @@
             <th>BRANCH</th>
         </tr>
         <tr>
-            <td>shaw</td>
+            <td>Shaw</td>
             <td>20</td>
             <td>CSE</td>
         </tr>
         <TR>
-            <TD>adil</TD>
+            <TD>Adil</TD>
             <TD>21</TD>
             <TD>ECE</TD>
         </TR>
