--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
         <caption>Student Details</caption>
         <tr>
             <th>NAME</th>
-            <TH>AGE</TH>
+            <th>AGE</th>
             <th>BRANCH</th>
         </tr>
         <tr>
@@ -36,11 +36,11 @@
             <td>20</td>
             <td>CSE</td>
         </tr>
-        <TR>
-            <TD>Adil</TD>
-            <TD>21</TD>
-            <TD>ECE</TD>
-        </TR>
+        <tr>
+            <tr>Adil</tr>
+            <tr>21</tr>
+            <tr>ECE</tr>
+        </tr>
 
     </table>
  </body>
