--- a/main.html
+++ b/main.html
@@ -37,9 +37,9 @@
             <td>CSE</td>
         </tr>
         <tr>
-            <tr>Adil</tr>
-            <tr>21</tr>
-            <tr>ECE</tr>
+            <td>Adil</td>
+            <td>21</td>
+            <td>ECE</td>
         </tr>
 
     </table>
