--- a/main.html
+++ b/main.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <!DOCTYPE html>
 
 <html>
 
@@ -16,15 +24,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
  </head>
  <body>
-   <STYle>
-        #tab2{
-            background-color: yellow;
-             
-        }
-    </STYle>
-    <table border="1px" id="tab2", style="border: black;" >
+        
+    <table  >
         <caption>Student Details</caption>
         <tr>
             <th>NAME</th>
@@ -47,4 +51,4 @@
  </html>
 </body>
 
-</html>
+ 
